# EDA093

./: .gitignore  CMakeLists.txt  lsh.c
lab1/: lsh.c  parse.c  parse.h
mount/lab2/lab2-template/src/threads/: synch.c
mount/lab2/pintos/: CMakeLists.txt
mount/lab2/pintos/src/devices/: batch-scheduler.c  timer.c
mount/lab2/pintos/src/threads/: synch.c  thread.c  thread.h
mount/lab2/pintos/src/utils/: pintos
