cmake_minimum_required(VERSION 3.17)
project(eda093)

set(CMAKE_CXX_STANDARD 14)

include_directories(lab1)
include_directories(mount/lab2/lab2-template/src/devices)
include_directories(mount/lab2/lab2-template/src/filesys)
include_directories(mount/lab2/lab2-template/src/lib)
include_directories(mount/lab2/lab2-template/src/lib/kernel)
include_directories(mount/lab2/lab2-template/src/lib/user)
include_directories(mount/lab2/lab2-template/src/tests)
include_directories(mount/lab2/lab2-template/src/tests/filesys)
include_directories(mount/lab2/lab2-template/src/tests/filesys/base)
include_directories(mount/lab2/lab2-template/src/tests/filesys/extended)
include_directories(mount/lab2/lab2-template/src/tests/threads)
include_directories(mount/lab2/lab2-template/src/tests/userprog)
include_directories(mount/lab2/lab2-template/src/tests/vm)
include_directories(mount/lab2/lab2-template/src/threads)
include_directories(mount/lab2/lab2-template/src/userprog)
include_directories(mount/lab2/pintos/src/devices)
include_directories(mount/lab2/pintos/src/filesys)
include_directories(mount/lab2/pintos/src/lib)
include_directories(mount/lab2/pintos/src/lib/kernel)
include_directories(mount/lab2/pintos/src/lib/user)
include_directories(mount/lab2/pintos/src/tests)
include_directories(mount/lab2/pintos/src/tests/filesys)
include_directories(mount/lab2/pintos/src/tests/filesys/base)
include_directories(mount/lab2/pintos/src/tests/filesys/extended)
include_directories(mount/lab2/pintos/src/tests/threads)
include_directories(mount/lab2/pintos/src/tests/userprog)
include_directories(mount/lab2/pintos/src/tests/vm)
include_directories(mount/lab2/pintos/src/threads)
include_directories(mount/lab2/pintos/src/userprog)

add_executable(eda093
        lab1/cmake-build-debug/cmake_install.cmake
        lab1/cmake-build-debug/CMakeCache.txt
        lab1/cmake-build-debug/EDA093.cbp
        lab1/cmake-build-debug/Makefile
        lab1/CMakeLists.txt
        lab1/lsh.c
        lab1/Makefile
        lab1/parse.c
        lab1/parse.h
        lab1/prepare-submission
        mount/lab2/lab2-template/src/devices/batch-scheduler.c
        mount/lab2/lab2-template/src/devices/block.c
        mount/lab2/lab2-template/src/devices/block.h
        mount/lab2/lab2-template/src/devices/ide.c
        mount/lab2/lab2-template/src/devices/ide.h
        mount/lab2/lab2-template/src/devices/input.c
        mount/lab2/lab2-template/src/devices/input.h
        mount/lab2/lab2-template/src/devices/intq.c
        mount/lab2/lab2-template/src/devices/intq.h
        mount/lab2/lab2-template/src/devices/kbd.c
        mount/lab2/lab2-template/src/devices/kbd.h
        mount/lab2/lab2-template/src/devices/partition.c
        mount/lab2/lab2-template/src/devices/partition.h
        mount/lab2/lab2-template/src/devices/pit.c
        mount/lab2/lab2-template/src/devices/pit.h
        mount/lab2/lab2-template/src/devices/rtc.c
        mount/lab2/lab2-template/src/devices/rtc.h
        mount/lab2/lab2-template/src/devices/serial.c
        mount/lab2/lab2-template/src/devices/serial.h
        mount/lab2/lab2-template/src/devices/shutdown.c
        mount/lab2/lab2-template/src/devices/shutdown.h
        mount/lab2/lab2-template/src/devices/speaker.c
        mount/lab2/lab2-template/src/devices/speaker.h
        mount/lab2/lab2-template/src/devices/timer.c
        mount/lab2/lab2-template/src/devices/timer.h
        mount/lab2/lab2-template/src/devices/vga.c
        mount/lab2/lab2-template/src/devices/vga.h
        mount/lab2/lab2-template/src/examples/bubsort.c
        mount/lab2/lab2-template/src/examples/cat.c
        mount/lab2/lab2-template/src/examples/cmp.c
        mount/lab2/lab2-template/src/examples/cp.c
        mount/lab2/lab2-template/src/examples/echo.c
        mount/lab2/lab2-template/src/examples/halt.c
        mount/lab2/lab2-template/src/examples/hex-dump.c
        mount/lab2/lab2-template/src/examples/insult.c
        mount/lab2/lab2-template/src/examples/lineup.c
        mount/lab2/lab2-template/src/examples/ls.c
        mount/lab2/lab2-template/src/examples/matmult.c
        mount/lab2/lab2-template/src/examples/mcat.c
        mount/lab2/lab2-template/src/examples/mcp.c
        mount/lab2/lab2-template/src/examples/mkdir.c
        mount/lab2/lab2-template/src/examples/pwd.c
        mount/lab2/lab2-template/src/examples/recursor.c
        mount/lab2/lab2-template/src/examples/rm.c
        mount/lab2/lab2-template/src/examples/shell.c
        mount/lab2/lab2-template/src/filesys/directory.c
        mount/lab2/lab2-template/src/filesys/directory.h
        mount/lab2/lab2-template/src/filesys/file.c
        mount/lab2/lab2-template/src/filesys/file.h
        mount/lab2/lab2-template/src/filesys/filesys.c
        mount/lab2/lab2-template/src/filesys/filesys.h
        mount/lab2/lab2-template/src/filesys/free-map.c
        mount/lab2/lab2-template/src/filesys/free-map.h
        mount/lab2/lab2-template/src/filesys/fsutil.c
        mount/lab2/lab2-template/src/filesys/fsutil.h
        mount/lab2/lab2-template/src/filesys/inode.c
        mount/lab2/lab2-template/src/filesys/inode.h
        mount/lab2/lab2-template/src/filesys/off_t.h
        mount/lab2/lab2-template/src/lib/kernel/bitmap.c
        mount/lab2/lab2-template/src/lib/kernel/bitmap.h
        mount/lab2/lab2-template/src/lib/kernel/console.c
        mount/lab2/lab2-template/src/lib/kernel/console.h
        mount/lab2/lab2-template/src/lib/kernel/debug.c
        mount/lab2/lab2-template/src/lib/kernel/hash.c
        mount/lab2/lab2-template/src/lib/kernel/hash.h
        mount/lab2/lab2-template/src/lib/kernel/list.c
        mount/lab2/lab2-template/src/lib/kernel/list.h
        mount/lab2/lab2-template/src/lib/kernel/stdio.h
        mount/lab2/lab2-template/src/lib/user/console.c
        mount/lab2/lab2-template/src/lib/user/debug.c
        mount/lab2/lab2-template/src/lib/user/entry.c
        mount/lab2/lab2-template/src/lib/user/stdio.h
        mount/lab2/lab2-template/src/lib/user/syscall.c
        mount/lab2/lab2-template/src/lib/user/syscall.h
        mount/lab2/lab2-template/src/lib/arithmetic.c
        mount/lab2/lab2-template/src/lib/ctype.h
        mount/lab2/lab2-template/src/lib/debug.c
        mount/lab2/lab2-template/src/lib/debug.h
        mount/lab2/lab2-template/src/lib/inttypes.h
        mount/lab2/lab2-template/src/lib/limits.h
        mount/lab2/lab2-template/src/lib/packed.h
        mount/lab2/lab2-template/src/lib/random.c
        mount/lab2/lab2-template/src/lib/random.h
        mount/lab2/lab2-template/src/lib/round.h
        mount/lab2/lab2-template/src/lib/stdarg.h
        mount/lab2/lab2-template/src/lib/stdbool.h
        mount/lab2/lab2-template/src/lib/stddef.h
        mount/lab2/lab2-template/src/lib/stdint.h
        mount/lab2/lab2-template/src/lib/stdio.c
        mount/lab2/lab2-template/src/lib/stdio.h
        mount/lab2/lab2-template/src/lib/stdlib.c
        mount/lab2/lab2-template/src/lib/stdlib.h
        mount/lab2/lab2-template/src/lib/string.c
        mount/lab2/lab2-template/src/lib/string.h
        mount/lab2/lab2-template/src/lib/syscall-nr.h
        mount/lab2/lab2-template/src/lib/ustar.c
        mount/lab2/lab2-template/src/lib/ustar.h
        mount/lab2/lab2-template/src/tests/filesys/base/child-syn-read.c
        mount/lab2/lab2-template/src/tests/filesys/base/child-syn-wrt.c
        mount/lab2/lab2-template/src/tests/filesys/base/lg-create.c
        mount/lab2/lab2-template/src/tests/filesys/base/lg-full.c
        mount/lab2/lab2-template/src/tests/filesys/base/lg-random.c
        mount/lab2/lab2-template/src/tests/filesys/base/lg-seq-block.c
        mount/lab2/lab2-template/src/tests/filesys/base/lg-seq-random.c
        mount/lab2/lab2-template/src/tests/filesys/base/sm-create.c
        mount/lab2/lab2-template/src/tests/filesys/base/sm-full.c
        mount/lab2/lab2-template/src/tests/filesys/base/sm-random.c
        mount/lab2/lab2-template/src/tests/filesys/base/sm-seq-block.c
        mount/lab2/lab2-template/src/tests/filesys/base/sm-seq-random.c
        mount/lab2/lab2-template/src/tests/filesys/base/syn-read.c
        mount/lab2/lab2-template/src/tests/filesys/base/syn-read.h
        mount/lab2/lab2-template/src/tests/filesys/base/syn-remove.c
        mount/lab2/lab2-template/src/tests/filesys/base/syn-write.c
        mount/lab2/lab2-template/src/tests/filesys/base/syn-write.h
        mount/lab2/lab2-template/src/tests/filesys/extended/child-syn-rw.c
        mount/lab2/lab2-template/src/tests/filesys/extended/dir-empty-name.c
        mount/lab2/lab2-template/src/tests/filesys/extended/dir-mk-tree.c
        mount/lab2/lab2-template/src/tests/filesys/extended/dir-mkdir.c
        mount/lab2/lab2-template/src/tests/filesys/extended/dir-open.c
        mount/lab2/lab2-template/src/tests/filesys/extended/dir-over-file.c
        mount/lab2/lab2-template/src/tests/filesys/extended/dir-rm-cwd.c
        mount/lab2/lab2-template/src/tests/filesys/extended/dir-rm-parent.c
        mount/lab2/lab2-template/src/tests/filesys/extended/dir-rm-root.c
        mount/lab2/lab2-template/src/tests/filesys/extended/dir-rm-tree.c
        mount/lab2/lab2-template/src/tests/filesys/extended/dir-rmdir.c
        mount/lab2/lab2-template/src/tests/filesys/extended/dir-under-file.c
        mount/lab2/lab2-template/src/tests/filesys/extended/dir-vine.c
        mount/lab2/lab2-template/src/tests/filesys/extended/grow-create.c
        mount/lab2/lab2-template/src/tests/filesys/extended/grow-dir-lg.c
        mount/lab2/lab2-template/src/tests/filesys/extended/grow-file-size.c
        mount/lab2/lab2-template/src/tests/filesys/extended/grow-root-lg.c
        mount/lab2/lab2-template/src/tests/filesys/extended/grow-root-sm.c
        mount/lab2/lab2-template/src/tests/filesys/extended/grow-seq-lg.c
        mount/lab2/lab2-template/src/tests/filesys/extended/grow-seq-sm.c
        mount/lab2/lab2-template/src/tests/filesys/extended/grow-sparse.c
        mount/lab2/lab2-template/src/tests/filesys/extended/grow-tell.c
        mount/lab2/lab2-template/src/tests/filesys/extended/grow-two-files.c
        mount/lab2/lab2-template/src/tests/filesys/extended/mk-tree.c
        mount/lab2/lab2-template/src/tests/filesys/extended/mk-tree.h
        mount/lab2/lab2-template/src/tests/filesys/extended/syn-rw.c
        mount/lab2/lab2-template/src/tests/filesys/extended/syn-rw.h
        mount/lab2/lab2-template/src/tests/filesys/extended/tar.c
        mount/lab2/lab2-template/src/tests/filesys/seq-test.c
        mount/lab2/lab2-template/src/tests/filesys/seq-test.h
        mount/lab2/lab2-template/src/tests/internal/list.c
        mount/lab2/lab2-template/src/tests/internal/stdio.c
        mount/lab2/lab2-template/src/tests/internal/stdlib.c
        mount/lab2/lab2-template/src/tests/threads/alarm-negative.c
        mount/lab2/lab2-template/src/tests/threads/alarm-simultaneous.c
        mount/lab2/lab2-template/src/tests/threads/alarm-wait.c
        mount/lab2/lab2-template/src/tests/threads/alarm-zero.c
        mount/lab2/lab2-template/src/tests/threads/batch-scheduler.c
        mount/lab2/lab2-template/src/tests/threads/tests.c
        mount/lab2/lab2-template/src/tests/threads/tests.h
        mount/lab2/lab2-template/src/tests/userprog/no-vm/multi-oom.c
        mount/lab2/lab2-template/src/tests/userprog/args.c
        mount/lab2/lab2-template/src/tests/userprog/bad-jump.c
        mount/lab2/lab2-template/src/tests/userprog/bad-jump2.c
        mount/lab2/lab2-template/src/tests/userprog/bad-read.c
        mount/lab2/lab2-template/src/tests/userprog/bad-read2.c
        mount/lab2/lab2-template/src/tests/userprog/bad-write.c
        mount/lab2/lab2-template/src/tests/userprog/bad-write2.c
        mount/lab2/lab2-template/src/tests/userprog/boundary.c
        mount/lab2/lab2-template/src/tests/userprog/boundary.h
        mount/lab2/lab2-template/src/tests/userprog/child-bad.c
        mount/lab2/lab2-template/src/tests/userprog/child-close.c
        mount/lab2/lab2-template/src/tests/userprog/child-rox.c
        mount/lab2/lab2-template/src/tests/userprog/child-simple.c
        mount/lab2/lab2-template/src/tests/userprog/close-bad-fd.c
        mount/lab2/lab2-template/src/tests/userprog/close-normal.c
        mount/lab2/lab2-template/src/tests/userprog/close-stdin.c
        mount/lab2/lab2-template/src/tests/userprog/close-stdout.c
        mount/lab2/lab2-template/src/tests/userprog/close-twice.c
        mount/lab2/lab2-template/src/tests/userprog/create-bad-ptr.c
        mount/lab2/lab2-template/src/tests/userprog/create-bound.c
        mount/lab2/lab2-template/src/tests/userprog/create-empty.c
        mount/lab2/lab2-template/src/tests/userprog/create-exists.c
        mount/lab2/lab2-template/src/tests/userprog/create-long.c
        mount/lab2/lab2-template/src/tests/userprog/create-normal.c
        mount/lab2/lab2-template/src/tests/userprog/create-null.c
        mount/lab2/lab2-template/src/tests/userprog/exec-arg.c
        mount/lab2/lab2-template/src/tests/userprog/exec-bad-ptr.c
        mount/lab2/lab2-template/src/tests/userprog/exec-missing.c
        mount/lab2/lab2-template/src/tests/userprog/exec-multiple.c
        mount/lab2/lab2-template/src/tests/userprog/exec-once.c
        mount/lab2/lab2-template/src/tests/userprog/exit.c
        mount/lab2/lab2-template/src/tests/userprog/halt.c
        mount/lab2/lab2-template/src/tests/userprog/multi-child-fd.c
        mount/lab2/lab2-template/src/tests/userprog/multi-recurse.c
        mount/lab2/lab2-template/src/tests/userprog/open-bad-ptr.c
        mount/lab2/lab2-template/src/tests/userprog/open-boundary.c
        mount/lab2/lab2-template/src/tests/userprog/open-empty.c
        mount/lab2/lab2-template/src/tests/userprog/open-missing.c
        mount/lab2/lab2-template/src/tests/userprog/open-normal.c
        mount/lab2/lab2-template/src/tests/userprog/open-null.c
        mount/lab2/lab2-template/src/tests/userprog/open-twice.c
        mount/lab2/lab2-template/src/tests/userprog/read-bad-fd.c
        mount/lab2/lab2-template/src/tests/userprog/read-bad-ptr.c
        mount/lab2/lab2-template/src/tests/userprog/read-boundary.c
        mount/lab2/lab2-template/src/tests/userprog/read-normal.c
        mount/lab2/lab2-template/src/tests/userprog/read-stdout.c
        mount/lab2/lab2-template/src/tests/userprog/read-zero.c
        mount/lab2/lab2-template/src/tests/userprog/rox-child.c
        mount/lab2/lab2-template/src/tests/userprog/rox-multichild.c
        mount/lab2/lab2-template/src/tests/userprog/rox-simple.c
        mount/lab2/lab2-template/src/tests/userprog/sc-bad-arg.c
        mount/lab2/lab2-template/src/tests/userprog/sc-bad-sp.c
        mount/lab2/lab2-template/src/tests/userprog/sc-boundary-2.c
        mount/lab2/lab2-template/src/tests/userprog/sc-boundary.c
        mount/lab2/lab2-template/src/tests/userprog/wait-bad-pid.c
        mount/lab2/lab2-template/src/tests/userprog/wait-killed.c
        mount/lab2/lab2-template/src/tests/userprog/wait-simple.c
        mount/lab2/lab2-template/src/tests/userprog/wait-twice.c
        mount/lab2/lab2-template/src/tests/userprog/write-bad-fd.c
        mount/lab2/lab2-template/src/tests/userprog/write-bad-ptr.c
        mount/lab2/lab2-template/src/tests/userprog/write-boundary.c
        mount/lab2/lab2-template/src/tests/userprog/write-normal.c
        mount/lab2/lab2-template/src/tests/userprog/write-stdin.c
        mount/lab2/lab2-template/src/tests/userprog/write-zero.c
        mount/lab2/lab2-template/src/tests/vm/child-inherit.c
        mount/lab2/lab2-template/src/tests/vm/child-linear.c
        mount/lab2/lab2-template/src/tests/vm/child-mm-wrt.c
        mount/lab2/lab2-template/src/tests/vm/child-qsort-mm.c
        mount/lab2/lab2-template/src/tests/vm/child-qsort.c
        mount/lab2/lab2-template/src/tests/vm/child-sort.c
        mount/lab2/lab2-template/src/tests/vm/mmap-bad-fd.c
        mount/lab2/lab2-template/src/tests/vm/mmap-clean.c
        mount/lab2/lab2-template/src/tests/vm/mmap-close.c
        mount/lab2/lab2-template/src/tests/vm/mmap-exit.c
        mount/lab2/lab2-template/src/tests/vm/mmap-inherit.c
        mount/lab2/lab2-template/src/tests/vm/mmap-misalign.c
        mount/lab2/lab2-template/src/tests/vm/mmap-null.c
        mount/lab2/lab2-template/src/tests/vm/mmap-over-code.c
        mount/lab2/lab2-template/src/tests/vm/mmap-over-data.c
        mount/lab2/lab2-template/src/tests/vm/mmap-over-stk.c
        mount/lab2/lab2-template/src/tests/vm/mmap-overlap.c
        mount/lab2/lab2-template/src/tests/vm/mmap-read.c
        mount/lab2/lab2-template/src/tests/vm/mmap-remove.c
        mount/lab2/lab2-template/src/tests/vm/mmap-shuffle.c
        mount/lab2/lab2-template/src/tests/vm/mmap-twice.c
        mount/lab2/lab2-template/src/tests/vm/mmap-unmap.c
        mount/lab2/lab2-template/src/tests/vm/mmap-write.c
        mount/lab2/lab2-template/src/tests/vm/mmap-zero.c
        mount/lab2/lab2-template/src/tests/vm/page-linear.c
        mount/lab2/lab2-template/src/tests/vm/page-merge-mm.c
        mount/lab2/lab2-template/src/tests/vm/page-merge-par.c
        mount/lab2/lab2-template/src/tests/vm/page-merge-seq.c
        mount/lab2/lab2-template/src/tests/vm/page-merge-stk.c
        mount/lab2/lab2-template/src/tests/vm/page-parallel.c
        mount/lab2/lab2-template/src/tests/vm/page-shuffle.c
        mount/lab2/lab2-template/src/tests/vm/parallel-merge.c
        mount/lab2/lab2-template/src/tests/vm/parallel-merge.h
        mount/lab2/lab2-template/src/tests/vm/pt-bad-addr.c
        mount/lab2/lab2-template/src/tests/vm/pt-bad-read.c
        mount/lab2/lab2-template/src/tests/vm/pt-big-stk-obj.c
        mount/lab2/lab2-template/src/tests/vm/pt-grow-bad.c
        mount/lab2/lab2-template/src/tests/vm/pt-grow-pusha.c
        mount/lab2/lab2-template/src/tests/vm/pt-grow-stack.c
        mount/lab2/lab2-template/src/tests/vm/pt-grow-stk-sc.c
        mount/lab2/lab2-template/src/tests/vm/pt-write-code-2.c
        mount/lab2/lab2-template/src/tests/vm/pt-write-code.c
        mount/lab2/lab2-template/src/tests/vm/qsort.c
        mount/lab2/lab2-template/src/tests/vm/qsort.h
        mount/lab2/lab2-template/src/tests/arc4.c
        mount/lab2/lab2-template/src/tests/arc4.h
        mount/lab2/lab2-template/src/tests/cksum.c
        mount/lab2/lab2-template/src/tests/cksum.h
        mount/lab2/lab2-template/src/tests/lib.c
        mount/lab2/lab2-template/src/tests/lib.h
        mount/lab2/lab2-template/src/tests/main.c
        mount/lab2/lab2-template/src/tests/main.h
        mount/lab2/lab2-template/src/threads/flags.h
        mount/lab2/lab2-template/src/threads/init.c
        mount/lab2/lab2-template/src/threads/init.h
        mount/lab2/lab2-template/src/threads/interrupt.c
        mount/lab2/lab2-template/src/threads/interrupt.h
        mount/lab2/lab2-template/src/threads/intr-stubs.h
        mount/lab2/lab2-template/src/threads/io.h
        mount/lab2/lab2-template/src/threads/loader.h
        mount/lab2/lab2-template/src/threads/malloc.c
        mount/lab2/lab2-template/src/threads/malloc.h
        mount/lab2/lab2-template/src/threads/palloc.c
        mount/lab2/lab2-template/src/threads/palloc.h
        mount/lab2/lab2-template/src/threads/pte.h
        mount/lab2/lab2-template/src/threads/switch.h
        mount/lab2/lab2-template/src/threads/synch.c
        mount/lab2/lab2-template/src/threads/synch.h
        mount/lab2/lab2-template/src/threads/thread.c
        mount/lab2/lab2-template/src/threads/thread.h
        mount/lab2/lab2-template/src/threads/vaddr.h
        mount/lab2/lab2-template/src/userprog/exception.c
        mount/lab2/lab2-template/src/userprog/exception.h
        mount/lab2/lab2-template/src/userprog/gdt.c
        mount/lab2/lab2-template/src/userprog/gdt.h
        mount/lab2/lab2-template/src/userprog/pagedir.c
        mount/lab2/lab2-template/src/userprog/pagedir.h
        mount/lab2/lab2-template/src/userprog/process.c
        mount/lab2/lab2-template/src/userprog/process.h
        mount/lab2/lab2-template/src/userprog/syscall.c
        mount/lab2/lab2-template/src/userprog/syscall.h
        mount/lab2/lab2-template/src/userprog/tss.c
        mount/lab2/lab2-template/src/userprog/tss.h
        mount/lab2/lab2-template/src/utils/setitimer-helper.c
        mount/lab2/lab2-template/src/utils/squish-pty.c
        mount/lab2/lab2-template/src/utils/squish-unix.c
        mount/lab2/pintos/src/devices/batch-scheduler.c
        mount/lab2/pintos/src/devices/block.c
        mount/lab2/pintos/src/devices/block.h
        mount/lab2/pintos/src/devices/ide.c
        mount/lab2/pintos/src/devices/ide.h
        mount/lab2/pintos/src/devices/input.c
        mount/lab2/pintos/src/devices/input.h
        mount/lab2/pintos/src/devices/intq.c
        mount/lab2/pintos/src/devices/intq.h
        mount/lab2/pintos/src/devices/kbd.c
        mount/lab2/pintos/src/devices/kbd.h
        mount/lab2/pintos/src/devices/partition.c
        mount/lab2/pintos/src/devices/partition.h
        mount/lab2/pintos/src/devices/pit.c
        mount/lab2/pintos/src/devices/pit.h
        mount/lab2/pintos/src/devices/rtc.c
        mount/lab2/pintos/src/devices/rtc.h
        mount/lab2/pintos/src/devices/serial.c
        mount/lab2/pintos/src/devices/serial.h
        mount/lab2/pintos/src/devices/shutdown.c
        mount/lab2/pintos/src/devices/shutdown.h
        mount/lab2/pintos/src/devices/speaker.c
        mount/lab2/pintos/src/devices/speaker.h
        mount/lab2/pintos/src/devices/timer.c
        mount/lab2/pintos/src/devices/timer.h
        mount/lab2/pintos/src/devices/vga.c
        mount/lab2/pintos/src/devices/vga.h
        mount/lab2/pintos/src/examples/bubsort.c
        mount/lab2/pintos/src/examples/cat.c
        mount/lab2/pintos/src/examples/cmp.c
        mount/lab2/pintos/src/examples/cp.c
        mount/lab2/pintos/src/examples/echo.c
        mount/lab2/pintos/src/examples/halt.c
        mount/lab2/pintos/src/examples/hex-dump.c
        mount/lab2/pintos/src/examples/insult.c
        mount/lab2/pintos/src/examples/lineup.c
        mount/lab2/pintos/src/examples/ls.c
        mount/lab2/pintos/src/examples/matmult.c
        mount/lab2/pintos/src/examples/mcat.c
        mount/lab2/pintos/src/examples/mcp.c
        mount/lab2/pintos/src/examples/mkdir.c
        mount/lab2/pintos/src/examples/pwd.c
        mount/lab2/pintos/src/examples/recursor.c
        mount/lab2/pintos/src/examples/rm.c
        mount/lab2/pintos/src/examples/shell.c
        mount/lab2/pintos/src/filesys/directory.c
        mount/lab2/pintos/src/filesys/directory.h
        mount/lab2/pintos/src/filesys/file.c
        mount/lab2/pintos/src/filesys/file.h
        mount/lab2/pintos/src/filesys/filesys.c
        mount/lab2/pintos/src/filesys/filesys.h
        mount/lab2/pintos/src/filesys/free-map.c
        mount/lab2/pintos/src/filesys/free-map.h
        mount/lab2/pintos/src/filesys/fsutil.c
        mount/lab2/pintos/src/filesys/fsutil.h
        mount/lab2/pintos/src/filesys/inode.c
        mount/lab2/pintos/src/filesys/inode.h
        mount/lab2/pintos/src/filesys/off_t.h
        mount/lab2/pintos/src/lib/kernel/bitmap.c
        mount/lab2/pintos/src/lib/kernel/bitmap.h
        mount/lab2/pintos/src/lib/kernel/console.c
        mount/lab2/pintos/src/lib/kernel/console.h
        mount/lab2/pintos/src/lib/kernel/debug.c
        mount/lab2/pintos/src/lib/kernel/hash.c
        mount/lab2/pintos/src/lib/kernel/hash.h
        mount/lab2/pintos/src/lib/kernel/list.c
        mount/lab2/pintos/src/lib/kernel/list.h
        mount/lab2/pintos/src/lib/kernel/stdio.h
        mount/lab2/pintos/src/lib/user/console.c
        mount/lab2/pintos/src/lib/user/debug.c
        mount/lab2/pintos/src/lib/user/entry.c
        mount/lab2/pintos/src/lib/user/stdio.h
        mount/lab2/pintos/src/lib/user/syscall.c
        mount/lab2/pintos/src/lib/user/syscall.h
        mount/lab2/pintos/src/lib/arithmetic.c
        mount/lab2/pintos/src/lib/ctype.h
        mount/lab2/pintos/src/lib/debug.c
        mount/lab2/pintos/src/lib/debug.h
        mount/lab2/pintos/src/lib/inttypes.h
        mount/lab2/pintos/src/lib/limits.h
        mount/lab2/pintos/src/lib/packed.h
        mount/lab2/pintos/src/lib/random.c
        mount/lab2/pintos/src/lib/random.h
        mount/lab2/pintos/src/lib/round.h
        mount/lab2/pintos/src/lib/stdarg.h
        mount/lab2/pintos/src/lib/stdbool.h
        mount/lab2/pintos/src/lib/stddef.h
        mount/lab2/pintos/src/lib/stdint.h
        mount/lab2/pintos/src/lib/stdio.c
        mount/lab2/pintos/src/lib/stdio.h
        mount/lab2/pintos/src/lib/stdlib.c
        mount/lab2/pintos/src/lib/stdlib.h
        mount/lab2/pintos/src/lib/string.c
        mount/lab2/pintos/src/lib/string.h
        mount/lab2/pintos/src/lib/syscall-nr.h
        mount/lab2/pintos/src/lib/ustar.c
        mount/lab2/pintos/src/lib/ustar.h
        mount/lab2/pintos/src/tests/filesys/base/child-syn-read.c
        mount/lab2/pintos/src/tests/filesys/base/child-syn-wrt.c
        mount/lab2/pintos/src/tests/filesys/base/lg-create.c
        mount/lab2/pintos/src/tests/filesys/base/lg-full.c
        mount/lab2/pintos/src/tests/filesys/base/lg-random.c
        mount/lab2/pintos/src/tests/filesys/base/lg-seq-block.c
        mount/lab2/pintos/src/tests/filesys/base/lg-seq-random.c
        mount/lab2/pintos/src/tests/filesys/base/sm-create.c
        mount/lab2/pintos/src/tests/filesys/base/sm-full.c
        mount/lab2/pintos/src/tests/filesys/base/sm-random.c
        mount/lab2/pintos/src/tests/filesys/base/sm-seq-block.c
        mount/lab2/pintos/src/tests/filesys/base/sm-seq-random.c
        mount/lab2/pintos/src/tests/filesys/base/syn-read.c
        mount/lab2/pintos/src/tests/filesys/base/syn-read.h
        mount/lab2/pintos/src/tests/filesys/base/syn-remove.c
        mount/lab2/pintos/src/tests/filesys/base/syn-write.c
        mount/lab2/pintos/src/tests/filesys/base/syn-write.h
        mount/lab2/pintos/src/tests/filesys/extended/child-syn-rw.c
        mount/lab2/pintos/src/tests/filesys/extended/dir-empty-name.c
        mount/lab2/pintos/src/tests/filesys/extended/dir-mk-tree.c
        mount/lab2/pintos/src/tests/filesys/extended/dir-mkdir.c
        mount/lab2/pintos/src/tests/filesys/extended/dir-open.c
        mount/lab2/pintos/src/tests/filesys/extended/dir-over-file.c
        mount/lab2/pintos/src/tests/filesys/extended/dir-rm-cwd.c
        mount/lab2/pintos/src/tests/filesys/extended/dir-rm-parent.c
        mount/lab2/pintos/src/tests/filesys/extended/dir-rm-root.c
        mount/lab2/pintos/src/tests/filesys/extended/dir-rm-tree.c
        mount/lab2/pintos/src/tests/filesys/extended/dir-rmdir.c
        mount/lab2/pintos/src/tests/filesys/extended/dir-under-file.c
        mount/lab2/pintos/src/tests/filesys/extended/dir-vine.c
        mount/lab2/pintos/src/tests/filesys/extended/grow-create.c
        mount/lab2/pintos/src/tests/filesys/extended/grow-dir-lg.c
        mount/lab2/pintos/src/tests/filesys/extended/grow-file-size.c
        mount/lab2/pintos/src/tests/filesys/extended/grow-root-lg.c
        mount/lab2/pintos/src/tests/filesys/extended/grow-root-sm.c
        mount/lab2/pintos/src/tests/filesys/extended/grow-seq-lg.c
        mount/lab2/pintos/src/tests/filesys/extended/grow-seq-sm.c
        mount/lab2/pintos/src/tests/filesys/extended/grow-sparse.c
        mount/lab2/pintos/src/tests/filesys/extended/grow-tell.c
        mount/lab2/pintos/src/tests/filesys/extended/grow-two-files.c
        mount/lab2/pintos/src/tests/filesys/extended/mk-tree.c
        mount/lab2/pintos/src/tests/filesys/extended/mk-tree.h
        mount/lab2/pintos/src/tests/filesys/extended/syn-rw.c
        mount/lab2/pintos/src/tests/filesys/extended/syn-rw.h
        mount/lab2/pintos/src/tests/filesys/extended/tar.c
        mount/lab2/pintos/src/tests/filesys/seq-test.c
        mount/lab2/pintos/src/tests/filesys/seq-test.h
        mount/lab2/pintos/src/tests/internal/list.c
        mount/lab2/pintos/src/tests/internal/stdio.c
        mount/lab2/pintos/src/tests/internal/stdlib.c
        mount/lab2/pintos/src/tests/threads/alarm-negative.c
        mount/lab2/pintos/src/tests/threads/alarm-simultaneous.c
        mount/lab2/pintos/src/tests/threads/alarm-wait.c
        mount/lab2/pintos/src/tests/threads/alarm-zero.c
        mount/lab2/pintos/src/tests/threads/batch-scheduler.c
        mount/lab2/pintos/src/tests/threads/tests.c
        mount/lab2/pintos/src/tests/threads/tests.h
        mount/lab2/pintos/src/tests/userprog/no-vm/multi-oom.c
        mount/lab2/pintos/src/tests/userprog/args.c
        mount/lab2/pintos/src/tests/userprog/bad-jump.c
        mount/lab2/pintos/src/tests/userprog/bad-jump2.c
        mount/lab2/pintos/src/tests/userprog/bad-read.c
        mount/lab2/pintos/src/tests/userprog/bad-read2.c
        mount/lab2/pintos/src/tests/userprog/bad-write.c
        mount/lab2/pintos/src/tests/userprog/bad-write2.c
        mount/lab2/pintos/src/tests/userprog/boundary.c
        mount/lab2/pintos/src/tests/userprog/boundary.h
        mount/lab2/pintos/src/tests/userprog/child-bad.c
        mount/lab2/pintos/src/tests/userprog/child-close.c
        mount/lab2/pintos/src/tests/userprog/child-rox.c
        mount/lab2/pintos/src/tests/userprog/child-simple.c
        mount/lab2/pintos/src/tests/userprog/close-bad-fd.c
        mount/lab2/pintos/src/tests/userprog/close-normal.c
        mount/lab2/pintos/src/tests/userprog/close-stdin.c
        mount/lab2/pintos/src/tests/userprog/close-stdout.c
        mount/lab2/pintos/src/tests/userprog/close-twice.c
        mount/lab2/pintos/src/tests/userprog/create-bad-ptr.c
        mount/lab2/pintos/src/tests/userprog/create-bound.c
        mount/lab2/pintos/src/tests/userprog/create-empty.c
        mount/lab2/pintos/src/tests/userprog/create-exists.c
        mount/lab2/pintos/src/tests/userprog/create-long.c
        mount/lab2/pintos/src/tests/userprog/create-normal.c
        mount/lab2/pintos/src/tests/userprog/create-null.c
        mount/lab2/pintos/src/tests/userprog/exec-arg.c
        mount/lab2/pintos/src/tests/userprog/exec-bad-ptr.c
        mount/lab2/pintos/src/tests/userprog/exec-missing.c
        mount/lab2/pintos/src/tests/userprog/exec-multiple.c
        mount/lab2/pintos/src/tests/userprog/exec-once.c
        mount/lab2/pintos/src/tests/userprog/exit.c
        mount/lab2/pintos/src/tests/userprog/halt.c
        mount/lab2/pintos/src/tests/userprog/multi-child-fd.c
        mount/lab2/pintos/src/tests/userprog/multi-recurse.c
        mount/lab2/pintos/src/tests/userprog/open-bad-ptr.c
        mount/lab2/pintos/src/tests/userprog/open-boundary.c
        mount/lab2/pintos/src/tests/userprog/open-empty.c
        mount/lab2/pintos/src/tests/userprog/open-missing.c
        mount/lab2/pintos/src/tests/userprog/open-normal.c
        mount/lab2/pintos/src/tests/userprog/open-null.c
        mount/lab2/pintos/src/tests/userprog/open-twice.c
        mount/lab2/pintos/src/tests/userprog/read-bad-fd.c
        mount/lab2/pintos/src/tests/userprog/read-bad-ptr.c
        mount/lab2/pintos/src/tests/userprog/read-boundary.c
        mount/lab2/pintos/src/tests/userprog/read-normal.c
        mount/lab2/pintos/src/tests/userprog/read-stdout.c
        mount/lab2/pintos/src/tests/userprog/read-zero.c
        mount/lab2/pintos/src/tests/userprog/rox-child.c
        mount/lab2/pintos/src/tests/userprog/rox-multichild.c
        mount/lab2/pintos/src/tests/userprog/rox-simple.c
        mount/lab2/pintos/src/tests/userprog/sc-bad-arg.c
        mount/lab2/pintos/src/tests/userprog/sc-bad-sp.c
        mount/lab2/pintos/src/tests/userprog/sc-boundary-2.c
        mount/lab2/pintos/src/tests/userprog/sc-boundary.c
        mount/lab2/pintos/src/tests/userprog/wait-bad-pid.c
        mount/lab2/pintos/src/tests/userprog/wait-killed.c
        mount/lab2/pintos/src/tests/userprog/wait-simple.c
        mount/lab2/pintos/src/tests/userprog/wait-twice.c
        mount/lab2/pintos/src/tests/userprog/write-bad-fd.c
        mount/lab2/pintos/src/tests/userprog/write-bad-ptr.c
        mount/lab2/pintos/src/tests/userprog/write-boundary.c
        mount/lab2/pintos/src/tests/userprog/write-normal.c
        mount/lab2/pintos/src/tests/userprog/write-stdin.c
        mount/lab2/pintos/src/tests/userprog/write-zero.c
        mount/lab2/pintos/src/tests/vm/child-inherit.c
        mount/lab2/pintos/src/tests/vm/child-linear.c
        mount/lab2/pintos/src/tests/vm/child-mm-wrt.c
        mount/lab2/pintos/src/tests/vm/child-qsort-mm.c
        mount/lab2/pintos/src/tests/vm/child-qsort.c
        mount/lab2/pintos/src/tests/vm/child-sort.c
        mount/lab2/pintos/src/tests/vm/mmap-bad-fd.c
        mount/lab2/pintos/src/tests/vm/mmap-clean.c
        mount/lab2/pintos/src/tests/vm/mmap-close.c
        mount/lab2/pintos/src/tests/vm/mmap-exit.c
        mount/lab2/pintos/src/tests/vm/mmap-inherit.c
        mount/lab2/pintos/src/tests/vm/mmap-misalign.c
        mount/lab2/pintos/src/tests/vm/mmap-null.c
        mount/lab2/pintos/src/tests/vm/mmap-over-code.c
        mount/lab2/pintos/src/tests/vm/mmap-over-data.c
        mount/lab2/pintos/src/tests/vm/mmap-over-stk.c
        mount/lab2/pintos/src/tests/vm/mmap-overlap.c
        mount/lab2/pintos/src/tests/vm/mmap-read.c
        mount/lab2/pintos/src/tests/vm/mmap-remove.c
        mount/lab2/pintos/src/tests/vm/mmap-shuffle.c
        mount/lab2/pintos/src/tests/vm/mmap-twice.c
        mount/lab2/pintos/src/tests/vm/mmap-unmap.c
        mount/lab2/pintos/src/tests/vm/mmap-write.c
        mount/lab2/pintos/src/tests/vm/mmap-zero.c
        mount/lab2/pintos/src/tests/vm/page-linear.c
        mount/lab2/pintos/src/tests/vm/page-merge-mm.c
        mount/lab2/pintos/src/tests/vm/page-merge-par.c
        mount/lab2/pintos/src/tests/vm/page-merge-seq.c
        mount/lab2/pintos/src/tests/vm/page-merge-stk.c
        mount/lab2/pintos/src/tests/vm/page-parallel.c
        mount/lab2/pintos/src/tests/vm/page-shuffle.c
        mount/lab2/pintos/src/tests/vm/parallel-merge.c
        mount/lab2/pintos/src/tests/vm/parallel-merge.h
        mount/lab2/pintos/src/tests/vm/pt-bad-addr.c
        mount/lab2/pintos/src/tests/vm/pt-bad-read.c
        mount/lab2/pintos/src/tests/vm/pt-big-stk-obj.c
        mount/lab2/pintos/src/tests/vm/pt-grow-bad.c
        mount/lab2/pintos/src/tests/vm/pt-grow-pusha.c
        mount/lab2/pintos/src/tests/vm/pt-grow-stack.c
        mount/lab2/pintos/src/tests/vm/pt-grow-stk-sc.c
        mount/lab2/pintos/src/tests/vm/pt-write-code-2.c
        mount/lab2/pintos/src/tests/vm/pt-write-code.c
        mount/lab2/pintos/src/tests/vm/qsort.c
        mount/lab2/pintos/src/tests/vm/qsort.h
        mount/lab2/pintos/src/tests/arc4.c
        mount/lab2/pintos/src/tests/arc4.h
        mount/lab2/pintos/src/tests/cksum.c
        mount/lab2/pintos/src/tests/cksum.h
        mount/lab2/pintos/src/tests/lib.c
        mount/lab2/pintos/src/tests/lib.h
        mount/lab2/pintos/src/tests/main.c
        mount/lab2/pintos/src/tests/main.h
        mount/lab2/pintos/src/threads/flags.h
        mount/lab2/pintos/src/threads/init.c
        mount/lab2/pintos/src/threads/init.h
        mount/lab2/pintos/src/threads/interrupt.c
        mount/lab2/pintos/src/threads/interrupt.h
        mount/lab2/pintos/src/threads/intr-stubs.h
        mount/lab2/pintos/src/threads/io.h
        mount/lab2/pintos/src/threads/loader.h
        mount/lab2/pintos/src/threads/malloc.c
        mount/lab2/pintos/src/threads/malloc.h
        mount/lab2/pintos/src/threads/palloc.c
        mount/lab2/pintos/src/threads/palloc.h
        mount/lab2/pintos/src/threads/pte.h
        mount/lab2/pintos/src/threads/switch.h
        mount/lab2/pintos/src/threads/synch.c
        mount/lab2/pintos/src/threads/synch.h
        mount/lab2/pintos/src/threads/thread.c
        mount/lab2/pintos/src/threads/thread.h
        mount/lab2/pintos/src/threads/vaddr.h
        mount/lab2/pintos/src/userprog/exception.c
        mount/lab2/pintos/src/userprog/exception.h
        mount/lab2/pintos/src/userprog/gdt.c
        mount/lab2/pintos/src/userprog/gdt.h
        mount/lab2/pintos/src/userprog/pagedir.c
        mount/lab2/pintos/src/userprog/pagedir.h
        mount/lab2/pintos/src/userprog/process.c
        mount/lab2/pintos/src/userprog/process.h
        mount/lab2/pintos/src/userprog/syscall.c
        mount/lab2/pintos/src/userprog/syscall.h
        mount/lab2/pintos/src/userprog/tss.c
        mount/lab2/pintos/src/userprog/tss.h
        mount/lab2/pintos/src/utils/setitimer-helper.c
        mount/lab2/pintos/src/utils/squish-pty.c
        mount/lab2/pintos/src/utils/squish-unix.c)
